--- a/Recipesgallary.html
+++ b/Recipesgallary.html
@@ -129,8 +129,8 @@
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
-                <li><a href="recipesgallary.html">RECIPES</a></li>
-                <li><a href="recipesgallary.html">BLOG</a></li>
+                <li><a href="Recipesgallary.html">RECIPES</a></li>
+                <li><a href="Recipesgallary.html">BLOG</a></li>
                 <li><a href="form.html">CONTACT</a></li>
             </ul>
         </div>
